--- a/index.html
+++ b/index.html
@@ -1,96 +1,173 @@
 <!DOCTYPE html>
 <html lang="fa">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PERSIAN PATRIOT VPN</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</head>
+    <link rel="icon" type="image/x-icon" href="./assets/img/logo.ico" />
 
-<body style="direction: rtl;text-align: right;">
+    <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <style>
+      li {
+        line-height: 2.1 !important;
+      }
+    </style>
+  </head>
 
+  <body style="direction: rtl; text-align: right">
     <!-- Begin page content -->
     <main role="main" class="container">
+      <center>
+        <img
+          src="./assets/img/logo.png"
+          alt="Logo"
+          class="mt-4"
+          style="width: 140px"
+        />
 
-        <center>
-
-            <img src="./assets/img/logo.png" alt="Logo" class="mt-4" style="width: 140px;">
-
-            <p class="lead">
-                این یک سیستم جهت رفع تحریم‌های ظالمانه 🫠 جهت اتصال به اینترنت می‌باشد
-            </p>
-
-        </center>
-
-
-
-
-        <h1 class="mt-5">راهنمای اتصال</h1>
-        <p class="lead">
-
+        <p class="lead mt-4">
+          این یک سیستم جهت رفع تحریم‌های ظالمانه 🫠 جهت اتصال به اینترنت می‌باشد
         </p>
 
+        <h3 class="mt-1">
+          <a href="https://persianpatriotvpn.github.io/" target="_self">
+            صفحه اصلی
+          </a>
+        </h3>
+      </center>
 
+      <h3 class="mt-5">راهنمای اتصال</h3>
+      <p class="lead"></p>
 
-        <div class="accordion accordion-flush" id="accordionFlushExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        راهنمای اتصال در IOS
-                    </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
-                </div>
+      <ul>
+        <li>
+          <a href="./connection-guide-on-ios.html" target="_blank">
+            راهنمای اتصال در IOS
+          </a>
+        </li>
+        <li>راهنمای اتصال در Android</li>
+        <li>راهنمای اتصال در Windows</li>
+      </ul>
+
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingOne">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseOne"
+              aria-expanded="false"
+              aria-controls="flush-collapseOne"
+            >
+              راهنمای اتصال در IOS
+            </button>
+          </h2>
+          <div
+            id="flush-collapseOne"
+            class="accordion-collapse collapse"
+            aria-labelledby="flush-headingOne"
+            data-bs-parent="#accordionFlushExample"
+          >
+            <div class="accordion-body">
+              <ul>
+                <li>
+                  1. ابتدا را از لینک زیر دانلود کنید:
+
+                  <br />
+                  <a
+                    href="https://apps.apple.com/us/app/napsternetv/id1629465476"
+                    target="_blank"
+                  >
+                    NapsternetV
+                  </a>
+                </li>
+                <li></li>
+              </ul>
             </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                        راهنمای اتصال در Android
-                    </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-
-                        <ul>
-                            <li>1. ابتدا نرم افزار
-                                NapsternetV
-
-                                از یکی از دو لینک زیر دانلود کنید:
-                                <br />
-                                <a href="./assets/files/com.napsternetlabs.napsternetv.apk" target="_blank">دانلود مستقیم ( پیشنهادی )</a>
-                                <br />
-                                <a href="https://play.google.com/store/apps/details?id=com.napsternetlabs.napsternetv&hl=en&gl=US" target="_blank">دانلود از گوگل پلی</a>
-                                <br />
-                            </li>
-                        </ul>
-
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        راهنمای اتصال Windows
-                    </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseTwo"
+              aria-expanded="false"
+              aria-controls="flush-collapseTwo"
+            >
+              راهنمای اتصال در Android
+            </button>
+          </h2>
+          <div
+            id="flush-collapseTwo"
+            class="accordion-collapse collapse"
+            aria-labelledby="flush-headingTwo"
+            data-bs-parent="#accordionFlushExample"
+          >
+            <div class="accordion-body">
+              <ul>
+                <li>
+                  1. ابتدا نرم افزار NapsternetV را از یکی از دو لینک زیر دانلود
+                  کنید:
+                  <br />
+                  <a
+                    href="https://drive.google.com/file/d/1evux8idsHJnwWeJKj3Vfcaj_Q4PtImbs/view?usp=share_link"
+                    target="_blank"
+                    >دانلود مستقیم ( پیشنهادی )</a
+                  >
+                  <br />
+                  <a
+                    href="https://play.google.com/store/apps/details?id=com.napsternetlabs.napsternetv&hl=en&gl=US"
+                    target="_blank"
+                    >دانلود از گوگل پلی</a
+                  >
+                  <br />
+                </li>
+                <li>.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#flush-collapseThree"
+              aria-expanded="false"
+              aria-controls="flush-collapseThree"
+            >
+              راهنمای اتصال Windows
+            </button>
+          </h2>
+          <div
+            id="flush-collapseThree"
+            class="accordion-collapse collapse"
+            aria-labelledby="flush-headingThree"
+            data-bs-parent="#accordionFlushExample"
+          >
+            <div class="accordion-body">
+              Placeholder content for this accordion, which is intended to
+              demonstrate the <code>.accordion-flush</code> class. This is the
+              third item's accordion body. Nothing more exciting happening here
+              in terms of content, but just filling up the space to make it
+              look, at least at first glance, a bit more representative of how
+              this would look in a real-world application.
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <span class="text-muted">Place sticky footer content here.</span>
-        </div>
+      <div class="container">
+        <span class="text-muted">Place sticky footer content here.</span>
+      </div>
     </footer>
-
-
-</body>
-
+  </body>
 </html>
