--- a/connection-guide-on-android.html
+++ b/connection-guide-on-android.html
@@ -10,9 +10,6 @@
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <style>
-      ul {
-        padding: unset !important;
-      }
       li {
         line-height: 2.1 !important;
       }
@@ -42,39 +39,28 @@
         </h3>
       </center>
 
-      <h3 class="mt-5">راهنمای اتصال</h3>
+      <h3 class="mt-5">راهنمای اتصال در Android</h3>
       <!-- end lead -->
-
-      <p class="lead"></p>
 
       <ul>
         <li>
-          <a href="./connection-guide-on-ios.html" target="_blank">
-            راهنمای اتصال در IOS
-          </a>
+          1. ابتدا نرم افزار NapsternetV را از یکی از دو لینک زیر دانلود کنید:
+          <br />
+          <a
+            href="https://drive.google.com/file/d/1evux8idsHJnwWeJKj3Vfcaj_Q4PtImbs/view?usp=share_link"
+            target="_blank"
+            >دانلود مستقیم ( پیشنهادی )</a
+          >
+          <br />
+          <a
+            href="https://play.google.com/store/apps/details?id=com.napsternetlabs.napsternetv&hl=en&gl=US"
+            target="_blank"
+            >دانلود از گوگل پلی</a
+          >
+          <br />
         </li>
-        <li>
-          <a href="./connection-guide-on-android.html" target="_blank">
-            راهنمای اتصال در Android
-          </a>
-        </li>
-        <li>
-          <a href="./connection-guide-on-windows.html" target="_blank">
-            راهنمای اتصال در Windows
-          </a>
-        </li>
-        <li>
-          <a href="./connection-guide-on-mac.html" target="_blank">
-            راهنمای اتصال در MAC
-          </a>
-        </li>
+        <li>.</li>
       </ul>
     </main>
-
-    <footer class="footer">
-      <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
-      </div>
-    </footer>
   </body>
 </html>
