--- a/connection-guide-on-ios.html
+++ b/connection-guide-on-ios.html
@@ -10,6 +10,9 @@
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <style>
+      ul {
+        padding: unset !important;
+      }
       li {
         line-height: 2.1 !important;
       }
@@ -19,6 +22,7 @@
   <body style="direction: rtl; text-align: right">
     <!-- Begin page content -->
     <main role="main" class="container">
+      <!-- lead -->
       <center>
         <img
           src="./assets/img/logo.png"
@@ -30,10 +34,133 @@
         <p class="lead mt-4">
           این یک سیستم جهت رفع تحریم‌های ظالمانه 🫠 جهت اتصال به اینترنت می‌باشد
         </p>
+
+        <h3 class="mt-1">
+          <a href="https://persianpatriotvpn.github.io/" target="_self">
+            صفحه اصلی
+          </a>
+        </h3>
       </center>
 
-      <h1 class="mt-5">IOS</h1>
-      <p class="lead"></p>
+      <h3 class="mt-5">راهنمای اتصال در IOS</h3>
+      <!-- end lead -->
+
+      <ul>
+        <li class="mt-4">1. برنامه napsternetv را دانلود کنید.</li>
+        <hr />
+        <li class="mt-4">
+          2. لینک دانلود
+          <a
+            href="https://apps.apple.com/us/app/napsternetv/id1629465476"
+            target="_blank"
+          >
+            NapsternetV
+          </a>
+          <br />
+          <img
+            src="./assets/img/ios/01.png"
+            class="mt-4"
+            style="width: 350px; border-radius: 14px"
+          />
+        </li>
+        <hr />
+
+        <li class="mt-4">
+          3. اکنون لینک vpn ارسال شده توسط پشتیبانی برای خودتان رو کپی کنید.
+        </li>
+        <hr />
+
+        <li class="mt-4">
+          4. برنامه را باز کنید و از منو پایین صفحه دکمه
+          <code>configs</code>
+          را فشار دهید و سپس علامت
+          <code>+</code>
+          در ناحیه سمت راست بالا صفحه را لمس کنید.
+          <br />
+          <img
+            src="./assets/img/ios/03.png"
+            class="mt-4"
+            style="width: 350px; border-radius: 14px"
+          />
+        </li>
+        <hr />
+
+        <li class="mt-4">
+          5. از منو باز شده گزینه Import v2ray uri from clipboard را انتخاب کنید
+          <br />
+          <img
+            src="./assets/img/ios/04.png"
+            class="mt-4"
+            style="width: 350px; border-radius: 14px"
+          />
+        </li>
+        <hr />
+
+        <li class="mt-4">
+          6. پس مشاهده پیام
+          <br />
+          <code>
+            "NapsternetV" woud like to paste from "***"
+            <br />
+            Do you want to alloe this?
+          </code>
+          <br />
+
+          گزینه Allow Paste را انتخاب کنید
+          <br />
+          <img
+            src="./assets/img/ios/05.png"
+            class="mt-4"
+            style="width: 350px; border-radius: 14px"
+          />
+        </li>
+        <hr />
+
+        <li class="mt-4">
+          7. در صورت موفقیت آمیز بودن فرآیند پیام زیر را مشاهده خواهید کرد.
+          <br />
+          <img
+            src="./assets/img/ios/06.png"
+            class="mt-4"
+            style="width: 350px; border-radius: 14px"
+          />
+        </li>
+        <hr />
+
+        <li class="mt-4">
+          8. حال در لیست روی ایتم وارد شدن کلیک کنید تا نوار سمت چپ آن آبی شود
+          <br />
+          <img
+            src="./assets/img/ios/07.png"
+            class="mt-4"
+            style="width: 350px; border-radius: 14px"
+          />
+        </li>
+        <hr />
+
+        <li class="mt-4">
+          9. حال از منو پایین صفحه گزینه
+          <code>Home</code>
+          را انتخاب کنید و پس از گزینه پلی آبی پایین سمت راست صفحه را فشار کنید.
+          <br />
+          <img
+            src="./assets/img/ios/08.png"
+            class="mt-4"
+            style="width: 350px; border-radius: 14px"
+          />
+        </li>
+        <hr />
+
+        <li class="mt-4">
+          10. خیلی خب، به فضل الهی به اینترنت وصل شدید.
+          <br />
+          <img
+            src="./assets/img/ios/09.png"
+            class="mt-4"
+            style="width: 350px; border-radius: 14px"
+          />
+        </li>
+      </ul>
     </main>
   </body>
 </html>
