--- a/connection-guide-on-ios.html
+++ b/connection-guide-on-ios.html
@@ -141,7 +141,7 @@
         <li class="mt-4">
           9. حال از منو پایین صفحه گزینه
           <code>Home</code>
-          را انتخاب کنید و پس از گزینه پلی آبی پایین سمت راست صفحه را فشار کنید.
+          را انتخاب کنید و پس از گزینه آبی پایین سمت راست صفحه را فشار کنید.
           <br />
           <img
             src="./assets/img/ios/08.png"
