--- a/index.html
+++ b/index.html
@@ -69,12 +69,17 @@
           </a>
         </li>
       </ul>
+
+      <br />
+
+
+      <p>
+        <h3 class="mt-5 mb-4">لینک‌های ارتباطی</h3>
+        <h6><strong class="m-2">✔️</strong><a href="https://t.me/PersianPatriotVPN" target="_blank">تلگرام</a></h6>
+        <h6><strong class="m-2">✔️</strong><a href="https://www.instagram.com/persianpatriotvpn/" target="_blank">اینستاگرام</a></h6>
+      </p>
     </main>
 
-    <footer class="footer">
-      <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
-      </div>
-    </footer>
+    
   </body>
 </html>
