--- a/connection-guide-on-ios.html
+++ b/connection-guide-on-ios.html
@@ -8,7 +8,6 @@
     <link rel="icon" type="image/x-icon" href="./assets/img/logo.ico" />
 
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <style>
       ul {
         padding: unset !important;
@@ -22,28 +21,9 @@
   <body style="direction: rtl; text-align: right">
     <!-- Begin page content -->
     <main role="main" class="container">
-      <!-- lead -->
-      <center>
-        <img
-          src="./assets/img/logo.png"
-          alt="Logo"
-          class="mt-4"
-          style="width: 140px"
-        />
-
-        <p class="lead mt-4">
-          این یک سیستم جهت رفع تحریم‌های ظالمانه 🫠 جهت اتصال به اینترنت می‌باشد
-        </p>
-
-        <h3 class="mt-1">
-          <a href="https://persianpatriotvpn.github.io/" target="_self">
-            صفحه اصلی
-          </a>
-        </h3>
-      </center>
+      <div id="sectionMain"></div>
 
       <h3 class="mt-5">راهنمای اتصال در IOS</h3>
-      <!-- end lead -->
 
       <ul>
         <li class="mt-4">1. برنامه napsternetv را دانلود کنید.</li>
@@ -162,5 +142,8 @@
         </li>
       </ul>
     </main>
+
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
