--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="icon" type="image/x-icon" href="./assets/img/logo.ico" />
 
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <style>
       ul {
         padding: unset !important;
@@ -22,49 +21,29 @@
   <body style="direction: rtl; text-align: right">
     <!-- Begin page content -->
     <main role="main" class="container">
-      <!-- lead -->
-      <center>
-        <img
-          src="./assets/img/logo.png"
-          alt="Logo"
-          class="mt-4"
-          style="width: 140px"
-        />
-
-        <p class="lead mt-4">
-          این یک سیستم جهت رفع تحریم‌های ظالمانه 🫠 جهت اتصال به اینترنت می‌باشد
-        </p>
-
-        <h3 class="mt-1">
-          <a href="https://persianpatriotvpn.github.io/" target="_self">
-            صفحه اصلی
-          </a>
-        </h3>
-      </center>
+      <div id="sectionMain"></div>
 
       <h3 class="mt-5">راهنمای اتصال</h3>
-      <!-- end lead -->
-
       <p class="lead"></p>
 
       <ul>
         <li>
-          <a href="./connection-guide-on-ios.html" target="_blank">
+          <a href="./connection-guide-on-ios.html" target="_self">
             راهنمای اتصال در IOS
           </a>
         </li>
         <li>
-          <a href="./connection-guide-on-android.html" target="_blank">
+          <a href="./connection-guide-on-android.html" target="_self">
             راهنمای اتصال در Android
           </a>
         </li>
         <li>
-          <a href="./connection-guide-on-windows.html" target="_blank">
+          <a href="./connection-guide-on-windows.html" target="_self">
             راهنمای اتصال در Windows
           </a>
         </li>
         <li>
-          <a href="./connection-guide-on-mac.html" target="_blank">
+          <a href="./connection-guide-on-mac.html" target="_self">
             راهنمای اتصال در MAC
           </a>
         </li>
@@ -72,14 +51,24 @@
 
       <br />
 
-
-      <p>
+      <div>
         <h3 class="mt-5 mb-4">لینک‌های ارتباطی</h3>
-        <h6><strong class="m-2">✔️</strong><a href="https://t.me/PersianPatriotVPN" target="_blank">تلگرام</a></h6>
-        <h6><strong class="m-2">✔️</strong><a href="https://www.instagram.com/persianpatriotvpn/" target="_blank">اینستاگرام</a></h6>
-      </p>
+        <h6>
+          <strong class="m-2">✔️</strong
+          ><a href="https://t.me/PersianPatriotVPN" target="_blank">تلگرام</a>
+        </h6>
+        <h6>
+          <strong class="m-2">✔️</strong
+          ><a
+            href="https://www.instagram.com/persianpatriotvpn/"
+            target="_blank"
+            >اینستاگرام</a
+          >
+        </h6>
+      </div>
     </main>
 
-    
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
