--- a/connection-guide-on-android.html
+++ b/connection-guide-on-android.html
@@ -20,7 +20,16 @@
     <main role="main" class="container">
       <div id="sectionMain"></div>
 
-      <h3 class="mt-5">راهنمای اتصال در Android</h3>
+      <h3 class="mt-5">
+        راهنمای اتصال در Android
+        <a
+          href="./assets/img/help/android.png"
+          target="_blank"
+          style="font-size: 12px; text-decoration: unset"
+        >
+          ( دانلود راهنمای Android )
+        </a>
+      </h3>
 
       <ul>
         <li>
