--- a/connection-guide-on-ios.html
+++ b/connection-guide-on-ios.html
@@ -23,10 +23,19 @@
     <main role="main" class="container">
       <div id="sectionMain"></div>
 
-      <h3 class="mt-5">راهنمای اتصال در IOS</h3>
+      <h3 class="mt-5">
+        راهنمای اتصال در IOS
+        <a
+          href="./assets/img/help/ios.png"
+          target="_blank"
+          style="font-size: 12px; text-decoration: unset"
+        >
+          ( دانلود راهنمای IOS )
+        </a>
+      </h3>
 
       <ul>
-        <li class="mt-4">1. برنامه napsternetv را دانلود کنید.</li>
+        <li class="mt-4">1. برنامه NapsternetV را دانلود کنید.</li>
         <hr />
         <li class="mt-4">
           2. لینک دانلود
