--- a/ssh-connection-guide-on-android.html
+++ b/ssh-connection-guide-on-android.html
@@ -148,18 +148,7 @@
         <hr />
 
         <li class="mt-4">
-          10. اکنون لینک ارسالی توسط پشتیبانی را به طور کامل کپی کنید.
-          <br />
-          <img
-            src="./assets/img/android/12.jpg"
-            class="mt-4"
-            style="width: 280px; border-radius: 14px"
-          />
-        </li>
-        <hr />
-
-        <li class="mt-4">
-          11. حالا برنامه
+          10. حالا برنامه
           <code>NapsternetV</code>
           را باز کنید.
           <br />
@@ -172,7 +161,7 @@
         <hr />
 
         <li class="mt-4">
-          12. پس از مشاهده این صفحه از منو پایین گزینه
+          11. پس از مشاهده این صفحه از منو پایین گزینه
           <code>Configs</code>
           را انتخاب کنید.
           <br />
@@ -185,7 +174,7 @@
         <hr />
 
         <li class="mt-4">
-          13. حال از منو بالا گزینه
+          12. حال از منو بالا گزینه
           <code>+</code>
           را انتخاب کنید.
           <br />
@@ -198,9 +187,9 @@
         <hr />
 
         <li class="mt-4">
-          14. حال از منو باز شده گزینه
+          13. حال از منو باز شده گزینه
           <br />
-          <code>Import config from clipboard</code>
+          <code>Add config manually</code>
           <br />
           را انتخاب کنید.
           <br />
@@ -213,14 +202,14 @@
         <hr />
 
         <li class="mt-4">
-          15. اکنون از منو باز شده گزینه
+          14. اکنون از منو باز شده گزینه
           <br />
-          <code>V2ray config uri</code>
+          <code>SSH Config</code>
           <br />
           را انتخاب کنید.
           <br />
           <img
-            src="./assets/img/android/17.jpg"
+            src="./assets/img/android-ssh/1.jpg"
             class="mt-4"
             style="width: 280px; border-radius: 14px"
           />
@@ -228,16 +217,25 @@
         <hr />
 
         <li class="mt-4">
-          16. در صورت موفقیت آمیز بودن فرآیند یک آیتم به لیست شما اضافه شده و
-          عبارت
+          15. حال مقدار دریافتی از پشتیبانی را به دقت وارد کنید و دکمه
+          <code>Save</code>
 
+          در بالا را فشار دهید.
           <br />
-          <code>Importation successful</code>
+          <label for="">نکته:</label>
           <br />
-          در پایین صفحه به نمایش در می‌آید
+          در قسمت
+          <code>SSH Host</code>
+          به هیچ عنوان عبارت‌های
+          <code>http://</code>
+          و یا
+          <code>https://</code>
+          در ابتدا و کارکتر
+          <code>/</code>
+          در انتها وارد نشود.
           <br />
           <img
-            src="./assets/img/android/21.jpg"
+            src="./assets/img/android-ssh/2.jpg"
             class="mt-4"
             style="width: 280px; border-radius: 14px"
           />
@@ -245,10 +243,10 @@
         <hr />
 
         <li class="mt-4">
-          17. حال روی آیتم بوجود آمده ضربه بزنید تا نوار کناری آن آبی شود.
+          16. حال روی آیتم بوجود آمده ضربه بزنید تا نوار کناری آن آبی شود.
           <br />
           <img
-            src="./assets/img/android/22.jpg"
+            src="./assets/img/android-ssh/3.jpg"
             class="mt-4"
             style="width: 280px; border-radius: 14px"
           />
@@ -256,12 +254,12 @@
         <hr />
 
         <li class="mt-4">
-          18. اکنون از منو پایین گزینه
+          17. اکنون از منو پایین گزینه
           <code>Home</code>
           را انتخاب کنید و دکمه دایره شکل پایین صفحه را فشار دهید.
           <br />
           <img
-            src="./assets/img/android/23.jpg"
+            src="./assets/img/android-ssh/4.jpg"
             class="mt-4"
             style="width: 280px; border-radius: 14px"
           />
@@ -269,7 +267,7 @@
         <hr />
 
         <li class="mt-4">
-          19. خیلی خب، به فضل الهی به اینترنت وصل شدید.
+          18. خیلی خب، به فضل الهی به اینترنت وصل شدید.
 
           <br />
           <img
