--- a/ssh-connection-guide-on-ios.html
+++ b/ssh-connection-guide-on-ios.html
@@ -46,15 +46,12 @@
         <hr />
 
         <li class="mt-4">
-          3. اکنون لینک vpn ارسال شده توسط پشتیبانی برای خودتان رو کپی کنید.
-        </li>
-        <hr />
-
-        <li class="mt-4">
           4. برنامه را باز کنید و از منو پایین صفحه دکمه
           <code>configs</code>
           را فشار دهید و سپس علامت
-          <code>+</code>
+
+          <img src="./assets/img/pencil-square.svg" style="width: 14px" />
+
           در ناحیه سمت راست بالا صفحه را لمس کنید.
           <br />
           <img
@@ -66,10 +63,14 @@
         <hr />
 
         <li class="mt-4">
-          5. از منو باز شده گزینه Import v2ray uri from clipboard را انتخاب کنید
+          5. از منو باز شده گزینه
+
+          <code>Add SSH config</code>
+
+          را انتخاب کنید
           <br />
           <img
-            src="./assets/img/ios/04.png"
+            src="./assets/img/ios-ssh/1.png"
             class="mt-4"
             style="width: 350px; border-radius: 14px"
           />
@@ -77,19 +78,25 @@
         <hr />
 
         <li class="mt-4">
-          6. پس مشاهده پیام
-          <br />
-          <code>
-            "NapsternetV" woud like to paste from "***"
-            <br />
-            Do you want to alloe this?
-          </code>
-          <br />
+          6. حال مقدار دریافتی از پشتیبانی را به دقت وارد کنید و دکمه
+          <img src="./assets/img/save.svg" style="width: 14px" />
 
-          گزینه Allow Paste را انتخاب کنید
+          در بالا را فشار دهید.
+          <br />
+          <label for="">نکته:</label>
+          <br />
+          در قسمت
+          <code>SSH Host</code>
+          به هیچ عنوان عبارت‌های
+          <code>http://</code>
+          و یا
+          <code>https://</code>
+          در ابتدا و کارکتر
+          <code>/</code>
+          در انتها وارد نشود.
           <br />
           <img
-            src="./assets/img/ios/05.png"
+            src="./assets/img/ios-ssh/2.png"
             class="mt-4"
             style="width: 350px; border-radius: 14px"
           />
@@ -97,10 +104,10 @@
         <hr />
 
         <li class="mt-4">
-          7. در صورت موفقیت آمیز بودن فرآیند پیام زیر را مشاهده خواهید کرد.
+          7. حال در لیست روی ایتم وارد شدن کلیک کنید تا نوار سمت چپ آن آبی شود
           <br />
           <img
-            src="./assets/img/ios/06.png"
+            src="./assets/img/ios-ssh/3.png"
             class="mt-4"
             style="width: 350px; border-radius: 14px"
           />
@@ -108,18 +115,7 @@
         <hr />
 
         <li class="mt-4">
-          8. حال در لیست روی ایتم وارد شدن کلیک کنید تا نوار سمت چپ آن آبی شود
-          <br />
-          <img
-            src="./assets/img/ios/07.png"
-            class="mt-4"
-            style="width: 350px; border-radius: 14px"
-          />
-        </li>
-        <hr />
-
-        <li class="mt-4">
-          9. حال از منو پایین صفحه گزینه
+          8. حال از منو پایین صفحه گزینه
           <code>Home</code>
           را انتخاب کنید و پس از گزینه آبی پایین سمت راست صفحه را فشار کنید.
           <br />
@@ -132,7 +128,7 @@
         <hr />
 
         <li class="mt-4">
-          10. خیلی خب، به فضل الهی به اینترنت وصل شدید.
+          9. خیلی خب، به فضل الهی به اینترنت وصل شدید.
           <br />
           <img
             src="./assets/img/ios/09.png"
